<resources>
    <string name="app_name">PhishEye</string>
    <string name="title_welcome_page">Welcome to PhishEye</string>
    <string name="message_welcome_page">Come on, register yourself now and you can detect indications of phishing URLs that you encounter!</string>
    <string name="gettingstarted">Getting Started</string>
    <string name="title_register_page">Sign Up Now</string>
    <string name="subtitle_signup_page">Please fill the details and create account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="message_login_page">Please log in to continue using PhishEye</string>
    <string name="title_login_page">Log In Now</string>
    <string name="message_report">In case you come across a URL link suspected of being a new phishing attempt, kindly provide the URL below!</string>
    <string name="tv_finish_report">Thank you for helping us in gathering information about the latest patterns of phishing. We will continue to improve our services to help many people avoid phishing scams.</string>
    <string name="tv_detecnev">We can confidently state that the provided URL doesn’t appear to be a phishing attempt. However, it is recommended to proceed with caution and stay vigilant for safety.</string>
    <string name="tv_detecpos">The provided image is likely to be a phishing attempt. Exercise caution and avoid interacting with the link or file. If you\'ve already clicked on it, please visit the education articles below to learn how to handle the situation.</string>
    <string name="login_succes">Login Berhasil</string>
    <string name="login_failed">Login Gagal</string>
    <string name="create_account_failed">Gagal membuat akun\n</string>
    <string name="create_account_succes">Berhasil membuat akun\n</string>
    <string name="error_required_field">This field is required</string>
    <string name="see_more">See More</string>
    <string name="detect_url_link">Detect Phishing Scams</string>
    <string name="check">Check</string>
    <string name="about">about</string>
    <string name="logout">Logout</string>
    <string name="report_Succes">Report Succes</string>
    <string name="report_failed">Report failed</string>
    <string name="log_out">Log Out</string>
    <string name="are_you_sure">Are You Sure ?</string>
    <string name="oke">Oke</string>
    <string name="cancel">Cancel</string>
</resources>